--- a/SimpleCalculator/CalculatorWindow.xaml
+++ b/SimpleCalculator/CalculatorWindow.xaml
@@ -172,7 +172,7 @@
 
             
 
-            <!-- Exit Button -->
+            <!-- Clear Button -->
             <StackPanel Orientation="Vertical" Margin="0,50,0,0">
                 <Button
                 Name="clearButton"
@@ -185,6 +185,7 @@
                 Foreground="BlanchedAlmond"
                 Click="ClearButton_Click"/>
                 
+                <!-- Exit Button -->
                 <Button
                     Name="exitButton"
                     Content="Exit"
